--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -1,4 +1,4 @@
-html, body, ul, li, h1, h2, h3, h4, ul, a, p {
+html, body, ul, li, ul, a, p {
   letter-spacing: 0.5px;
   font-weight: normal;
   font-size: 100%;
