--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -5,3 +5,26 @@ html, body, ul, li, ul, a, p {
   font-family: 'Andale Mono','Hiragino Kaku Gothic ProN','ヒラギノ角ゴ ProN W3',sans-serif;
   color: #2c3e50;
 }
+
+header {
+  width: 100%;
+  height: 100px;
+  background-color: rd;
+  position: fixed;
+  display: flex;
+  h1 {
+    margin: 0; padding: 0;
+    font-size: 20px;
+  }
+  a {
+    text-decoration: none;
+  }
+  ul {
+    list-style: none;
+    margin: 0;
+    display: flex;
+  }
+  nav {
+    margin: 0 auto;
+  }
+}
