--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -1,6 +1,5 @@
-html, body, article, h2, h3, h4, ul, li, ul, a, p {
+html, body, article, ul, li, ul, a, p {
   letter-spacing: 0.5px;
-  font-size: 100%;
   font-family: 'Hiragino Kaku Gothic ProN','ヒラギノ角ゴ ProN W3',sans-serif;
   color: #2c3e50;
 }
